# attiny3226_geiger

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: build.yml
include/: config.h.in
resources/: icons_font.bdf  img_decode.py  img_mem.txt  log_lut.py  main_font.bdf  scale.py  warning.xbm
src/: CMakeLists.txt  main.c  u8x8_tinyavr_2.c  u8x8_tinyavr_2.h
